--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://inforesourcesdb.cltwcgerufsf.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.url=XXX
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Cya4FrdlywOJBkzQYGkx
+spring.datasource.password=XXXX
 
 #hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
